@startuml

title Juego, Carta, Objetivo y Observable

class Juego {
    - etapa: Etapa
    - continente: ArrayList
    - jugadores: ArrayList
    + {static} Juego(jugadores: ArrayList): Juego
    + buscarPais(unPais: String): Pais
}

Juego "1" --> "*" Carta

class Carta {
    - pais: Pais;
    - simbolo: String;
    - estado: EstadoCarta
    + {static} Carta(pais: Pais, simbolo: String): Carta
    + {static} canjeables(carta1, carta2, carta3): boolean
    + activarse(): void
}

Juego "1" --> "*" Objetivo

class Objetivo {
    # objetivoComunCumplido(jugador: Jugador): boolean
    + {abstract} cumplido(jugador: Jugador): boolean
}

interface Observable {
    + agregarObservador(nuevoObservador: Observador): void
    + notificar(): void
}

class Juego
hide empty members
Juego ..|> Observable

@enduml